[package]
name = "asspro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
csv = "1.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
ipfs-api-backend-hyper = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
